# zed-extension

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  PUBLISHING.md  README.md  RELEASE.md  SECURITY.md  extension.toml  extension.wasm  package.json
.github/workflows/: release.yml
configuration/: default_settings.jsonc  installation_instructions.md
scripts/: release.sh
src/: ason-mcp.rs  ason.js  lib.rs  mcp_server_ason.rs
