[package]
name = "mcp_server_ason"
version = "1.0.0"
edition = "2021"
publish = false
license = "MIT"
repository = "https://github.com/ason-format/zed-extension"

[lib]
path = "src/mcp_server_ason.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"
serde = "1.0"
schemars = "0.8"
